UX: ensures boder is already present to avoid jumpyness

--- a/assets/stylesheets/common/discourse-reactions.scss
+++ b/assets/stylesheets/common/discourse-reactions.scss
@@ -64,7 +64,8 @@
     padding: 0.25em !important;
     margin: 0.25em !important;
     background: none !important;
-    border: 1px solid transparent;
+    border: 1px solid transparent !important;
+    border-radius: 3px !important;
     cursor: not-allowed;
 
     &.can-undo {
@@ -72,8 +73,7 @@
     }
 
     &.is-used {
-      border: 1px solid $tertiary-low;
-      border-radius: 3px;
+      border-color: $tertiary-low !important;
     }
 
     .emoji {
